--- a/css/home.css
+++ b/css/home.css
@@ -16,8 +16,10 @@ nav
 	display:inline-block;
 	background-color:rgba(125,125,125,0.33);
 	margin: 0;
-	padding: 0;
+	padding: 25px 25px;
 	width: 100%;
+	font-size: 36px;
+	grid-gap: 20px;
 }
 
 
@@ -28,6 +30,8 @@ nav ul li
 	list-style: none;
 	text-align: center;
 	display:inline-block;
+	margin-left: 1em;
+	margin-right:1em;
 }
 
 body
@@ -103,6 +107,17 @@ nav a:visited
 	list-style-type:square;
 	margin: 0 auto;
 	text-align: left;
+}
+
+.notyetready
+{
+	display: inline-block;
+
+	margin-left: 25%;
+	margin-right:25%;
+	margin-top: 25%;
+	color: white;
+	font-size: 42px;
 }
 
 .main-container
