--- a/css/home.css
+++ b/css/home.css
@@ -16,7 +16,7 @@ nav
 	display:inline-block;
 	background-color:rgba(125,125,125,0.33);
 	margin: 0;
-	padding: 25px 25px;
+	padding: 25px 0 25px;
 	width: 100%;
 	font-size: 36px;
 	grid-gap: 20px;
@@ -44,6 +44,7 @@ body
 	background-size: 100% 100%;
 	background-attachment: fixed;
 	animation: fadein 2s;
+	margin:0;
 
 }
 
